Overflow fixes for UI components in Chrome 73

--- a/woost/admin/ui/resources/styles/woost-admin-ui-editview.scss
+++ b/woost/admin/ui/resources/styles/woost-admin-ui-editview.scss
@@ -26,6 +26,10 @@
     flex: 1 1 auto;
     font-size: 1.3em;
 
+    &[tabbed='true'] {
+        overflow: hidden;
+    }
+
     &[tabbed='false'] {
         margin: 1.3rem;
     }
